crates/anvil-tui/src/surfaces/activation/snapshots/anvil_tui__surfaces__activation__render__tests__activation_consent.snap
---
source: crates/anvil-tui/src/surfaces/activation/render.rs
assertion_line: 432
expression: "render_to_string(&consent_surface, 100, 22)"
---
                                                                                                    
  Preflight > Working > [Consent] > Verdict > Done                                                  
                                                                                                    
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  ┌ Consent ─────────────────────────────────────────────────────────────────────────────────────┐  
  │▸ [ ] Cursor MCP  MCP — Write ~/.cursor/mcp.json                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  └──────────────────────────────────────────────────────────────────────────────────────────────┘  
  0 selected
