crates/anvil-tui/src/surfaces/activation/snapshots/anvil_tui__surfaces__activation__render__tests__activation_preflight.snap
---
source: crates/anvil-tui/src/surfaces/activation/render.rs
expression: "render_to_string(&preflight, 100, 22)"
---
                                                                                                    
  [Preflight] > Working > Consent > Verdict > Done                                                  
                                                                                                    
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  ◈ state: ready_restart_required                                                                   
  Activation state: ready_restart_required                                                          
  ┌ Activation verdict ──────────────────────────────────────────────────────────────────────────┐  
  │▼ Activation                                                                                  │  
  │  · state: ready_restart_required                                                             │  
  │  · next: restart editor                                                                      │  
  │· Layers                                                                                      │  
  │· Install                                                                                     │  
  │· Languages                                                                                   │  
  │· Config                                                                                      │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  └──────────────────────────────────────────────────────────────────────────────────────────────┘  
  [↑/↓] Move  [enter/space] Expand  [t] Smoke  [l] Logs  [q] Quit
