crates/anvil-tui/src/surfaces/activation/snapshots/anvil_tui__surfaces__activation__render__tests__activation_verdict.snap
---
source: crates/anvil-tui/src/surfaces/activation/render.rs
expression: "render_to_string(&verdict_surface, 100, 22)"
---
                                                                                                    
  Preflight > Working > Consent > [Verdict] > Done                                                  
                                                                                                    
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  ◈ state: ready_restart_required                                                                   
  Activation state: ready_restart_required                                                          
  next: restart editor                                                                              
  ┌ Activation verdict ──────────────────────────────────────────────────────────────────────────┐  
  │▼ Activation                                                                                  │  
  │  · state: ready_restart_required                                                             │  
  │· Layers                                                                                      │  
  │· Install                                                                                     │  
  │· Languages                                                                                   │  
  │· Config                                                                                      │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  └──────────────────────────────────────────────────────────────────────────────────────────────┘
