crates/anvil-tui/src/surfaces/activation/snapshots/anvil_tui__surfaces__activation__render__tests__activation_working.snap
---
source: crates/anvil-tui/src/surfaces/activation/render.rs
expression: "render_to_string(&working, 100, 24)"
---
                                                                                                    
  Preflight > [Working] > Consent > Verdict > Done                                                  
                                                                                                    
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  - Ensuring save-time daemon                                                                       
  ┌Activation progress (1/1)─────────────────────────────────────────────────────────────────────┐  
  │Initial probe ◆ 100%                                                                 --       │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  │                                                                                              │  
  └──────────────────────────────────────────────────────────────────────────────────────────────┘  
  ╔Activation activity (3)═══════════════════════════════════════════════════════════════════════╗  
  ║◇ 00 activation - state: ready_restart_required                                               ║  
  ║◇ 01 activation - next: restart editor                                                        ║  
  ║◇ 00 orchestrator - initial-probe: completed                                                  ║  
  ║                                                                                              ║  
  ║                                                                                              ║  
  ║                                                                                              ║  
  ║                                                                                              ║  
  ║                                                                                              ║  
  ║                                                                                              ║  
  ║                                                                                              ║  
  ╚══════════════════════════════════════════════════════════════════════════════════════════════╝
